# Codex-Session-Hub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  install.md
src/: app.rs  browser.rs  config.rs  formatting.rs  git.rs  main.rs  paths.rs  provider.rs  session.rs  shell.rs
src/Commands/: Cli.ps1
src/Common/: Paths.ps1
src/Fzf/: Browser.ps1
src/Sessions/: Parser.ps1
tests/: DisplayOrdering.Tests.ps1  Install.Tests.ps1  Metadata.Tests.ps1  SessionParser.Tests.ps1
