[package]
name = "agent-session-hub"
version = "0.2.4"
edition = "2024"
description = "fzf-powered session browser for Codex CLI and Claude Code"
license = "MIT"

[[bin]]
name = "agent-session-hub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
which = "8.0"

[dev-dependencies]
tempfile = "3.15"
